--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DiscordBot",
-  "version": "0.1",
+  "version": "0.1.1",
   "description": "Bot for Discord app",
   "readme": "README.md",
   "maintainers": [
@@ -15,6 +15,16 @@
     "discord.js": "*",
     "request": ">=2.58.0",
     "querystring": "*"
+    , "underscore": "1.8.x"
+    , "winston": "1.0.x"
+    , "sinon": "1.14.x"
+    , "nock": "1.7.x"
+    , "cleverbot-node": "0.2.x"
+    , "wolfram": "0.3.x"
+    , "tumblr.js": "0.0.x"
+    , "youtube-node": "1.2.x"
+    , "google": "1.1.x"
+    , "google-images": "0.1.x"
   },
   "main": "discord_bot.js"
 }
