--- a/auth.json.example
+++ b/auth.json.example
@@ -3,5 +3,6 @@
 	"password" : "password of the discord account here",
 	"youtube_api_key": "create one here https://console.developers.google.com",
 	"imgflip_username": "https://imgflip.com/ username",
-	"imgflip_password": "https://imgflip.com/ password"
+	"imgflip_password": "https://imgflip.com/ password",
+	"wolfram_api_key": "go here and click sign up http://products.wolframalpha.com/api/"
 }
