--- a/auth.json.example
+++ b/auth.json.example
@@ -2,7 +2,7 @@
 	"email" : "email of the discord account here",
 	"password" : "password of the discord account here",
 	"youtube_api_key": "create one here https://console.developers.google.com",
-	"google_custom_search": "Create one here https://cse.google.com/cse/",
+	"google_custom_search": "follow instructions at https://stackoverflow.com/questions/34035422/google-image-search-says-api-no-longer-available",
 	"imgflip_username": "https://imgflip.com/ username",
 	"imgflip_password": "https://imgflip.com/ password",
 	"wolfram_api_key": "go here and click sign up http://products.wolframalpha.com/api/"
