added d20 rolls with r command

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.1",
   "description": "Bot for Discord app",
   "readme": "README.md",
-  "maintainers": [
-  ],
+  "maintainers": [],
   "author": "",
   "repository": {
     "type": "git",
@@ -12,24 +11,25 @@
   },
   "license": "GNU",
   "dependencies": {
+    "cleverbot-node": "0.2.x",
+    "d20": "^1.4.0",
     "discord.js": "<=5.2.x",
+    "feedparser": "1.1.x",
+    "google": "1.1.x",
+    "google-images": "0.1.x",
+    "html-to-text": "1.5.x",
+    "imgflipper": "1.0.x",
+    "nock": "1.7.x",
+    "querystring": "0.2.x",
     "request": ">=2.58.0",
-    "querystring": "0.2.x"
-    , "underscore": "1.8.x"
-    , "winston": "1.0.x"
-    , "sinon": "1.14.x"
-    , "nock": "1.7.x"
-    , "wolfram": "0.3.x"
-    , "tumblr.js": "0.0.x"
-    , "youtube-node": "1.2.x"
-    , "google": "1.1.x"
-    , "google-images": "0.1.x"
-    , "imgflipper": "1.0.x"
-    , "wikijs": "0.1.x"
-    , "yahoo-finance": "0.2.x"
-    , "feedparser": "1.1.x"
-    , "html-to-text": "1.5.x"
-	, "cleverbot-node": "0.2.x"
+    "sinon": "1.14.x",
+    "tumblr.js": "0.0.x",
+    "underscore": "1.8.x",
+    "wikijs": "0.1.x",
+    "winston": "1.0.x",
+    "wolfram": "0.3.x",
+    "yahoo-finance": "0.2.x",
+    "youtube-node": "1.2.x"
   },
   "main": "discord_bot.js"
 }
