--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "d20": "^1.4.0",
-    "discord.js": "9.1.x",
-    "querystring": "0.2.x"
+    "d20": "^1.4.0"
+    , "discord.js": "9.1.x"
+    , "querystring": "0.2.x"
     , "underscore": "1.8.x"
     , "node-wolfram": "0.0.1"
     , "sinon": "1.14.x"
@@ -26,6 +26,8 @@
     , "wikijs": "0.1.x"
     , "yahoo-finance": "0.2.x"
     , "feedparser": "1.1.x"
+    , "leet": "^1.2.7"
+    , "urban": "^0.3.0"
     , "html-to-text": "1.5.x"
 	, "npm":""
   },
