Added support for logging in with a bot account
Updated discord.js dependency to 7.0

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "GNU",
   "dependencies": {
     "d20": "^1.4.0",
-    "discord.js": "<=5.2.x",
+    "discord.js": "7.0.x",
     "querystring": "0.2.x"
     , "underscore": "1.8.x"
     , "winston": "1.0.x"
