--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/chalda/DiscordBot.git"
   },
-  "license": "MIT",
+  "license": "GPL-2.0",
   "dependencies": {
     "d20": "^1.4.0"
     , "discord.js": "9.1.x"
