Added commands and support for different prefixes

--- a/permissions.json.example
+++ b/permissions.json.example
@@ -1,10 +1,12 @@
 {
 	"global":{
-		"eval": false
+		"eval": false,
+		"pullanddeploy": false
 	},
 	"users":{
 		"userid":{
-			"eval": false
+			"eval": false,
+			"pullanddeploy": true
 		}
 	}
 }
