Add Music Player!
Added a new MusicPlayer plugin:
- play: plays a url or search terms
- pause: pauses playback
- resume: resumes playback
- queue: prints the music queue
- skip: skip to the next song

--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
   },
   "license": "GPL-2.0",
   "dependencies": {
-    "d20": "^1.4.0"
-    , "discord.js": "9.1.x"
-    , "querystring": "0.2.x"
-    , "underscore": "1.8.x"
-    , "node-wolfram": "0.0.1"
-    , "sinon": "1.14.x"
-    , "nock": "1.7.x"
-    , "tumblr.js": "0.0.x"
-    , "youtube-node": "1.2.x"
-    , "google": "1.1.x"
-    , "google-images": "0.1.x"
-    , "imgflipper": "1.0.x"
-    , "wikijs": "0.1.x"
-    , "yahoo-finance": "0.2.x"
-    , "feedparser": "1.1.x"
-    , "leet": "^1.2.7"
-    , "urban": "^0.3.0"
-    , "html-to-text": "1.5.x"
-	, "npm":""
+    "d20": "^1.4.0",
+    "discord.js": "9.3.x",
+    "feedparser": "1.1.x",
+    "google": "1.1.x",
+    "google-images": "0.1.x",
+    "html-to-text": "1.5.x",
+    "imgflipper": "1.0.x",
+    "leet": "^1.2.7",
+    "nock": "1.7.x",
+    "node-wolfram": "0.0.1",
+    "npm": "",
+    "querystring": "0.2.x",
+    "sinon": "1.14.x",
+    "tumblr.js": "0.0.x",
+    "underscore": "1.8.x",
+    "urban": "^0.3.0",
+    "wikijs": "0.1.x",
+    "yahoo-finance": "0.2.x",
+    "youtube-node": "1.2.x"
   },
   "main": "discord_bot.js"
 }
