--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "litteral cancer",
+  "name": "litteral-cancer",
   "version": "0.1.1",
   "description": "Cancerous private server bot.",
   "readme": "README.md",
