--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "license": "GPL-2.0",
   "dependencies": {
+    "erlpack": "",
+    "opusscript": "",
+    "uws": "",
     "discord.js": "11.0.x",
     "feedparser": "1.1.x",
     "html-to-text": "1.5.x",
