--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "querystring": "0.2.x",
     "sinon": "1.14.x",
     "tumblr.js": "0.0.x",
-    "underscore": "1.8.x"
+    "underscore": "1.8.x",
+    "path": ""
   },
   "main": "discord_bot.js"
 }
