--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   },
   "license": "GPL-2.0",
   "dependencies": {
-    "discord.js": "11.0.x",
+    "cleverbot-node": "^0.2.8",
+    "d20": "^1.4.1",
+    "discord.js": "11.1.x",
     "feedparser": "1.1.x",
-    "html-to-text": "1.5.x",
+    "html-to-text": "^3.3.0",
+    "leet": "^1.3.0",
     "nock": "1.7.x",
+    "node-wolfram": "0.0.1",
     "npm": "",
     "querystring": "0.2.x",
+    "request-promise": "^4.2.1",
     "sinon": "1.14.x",
     "tumblr.js": "0.0.x",
-    "underscore": "1.8.x"
+    "underscore": "1.8.x",
+    "urban": "^0.3.1",
+    "wikijs": "^0.1.4",
+    "youtube-dl": "^1.11.1"
   },
   "main": "discord_bot.js"
 }
