--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "d20": "^1.4.1",
     "discord.js": "11.1.x",
     "feedparser": "1.1.x",
+    "ffmpeg-binaries": "^3.2.2-3",
     "html-to-text": "^3.3.0",
     "leet": "^1.3.0",
     "nock": "1.7.x",
     "node-wolfram": "0.0.1",
     "npm": "",
+    "opusscript": "0.0.6",
     "querystring": "0.2.x",
     "request-promise": "^4.2.1",
     "sinon": "1.14.x",
@@ -27,7 +29,9 @@
     "underscore": "1.8.x",
     "urban": "^0.3.1",
     "wikijs": "^0.1.4",
-    "youtube-dl": "^1.11.1"
+    "youtube-dl": "1.11.1",
+    "youtube-node": "^1.3.2",
+    "ytdl-core": "^0.20.2"
   },
   "main": "discord_bot.js"
 }
