--- a/auth.json.example
+++ b/auth.json.example
@@ -7,5 +7,6 @@
 	"google_custom_search": "follow instructions at https://stackoverflow.com/questions/34035422/google-image-search-says-api-no-longer-available",
 	"imgflip_username": "https://imgflip.com/ username",
 	"imgflip_password": "https://imgflip.com/ password",
-	"wolfram_api_key": "go here and click sign up http://products.wolframalpha.com/api/"
+	"wolfram_api_key": "go here and click sign up http://products.wolframalpha.com/api/",
+	"twitch_client_id": "create a twitch app here https://dev.twitch.tv/dashboard/apps/create (requires a twitch account)"
 }
