--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "dependencies": {
     "cleverbot-node": "^0.2.8",
     "d20": "^1.4.1",
-    "discord.js": "11.1.x",
+    "discord.js": "11.3.x",
     "feedparser": "1.1.x",
     "html-to-text": "^3.3.0",
+    "imgflipper": "^1.0.1",
     "leet": "^1.3.0",
     "nock": "1.7.x",
+    "node-opus": "^0.2.7",
     "node-wolfram": "0.0.1",
     "npm": "",
     "querystring": "0.2.x",
+    "request": "^2.85.0",
     "request-promise": "^4.2.1",
     "sinon": "1.14.x",
     "tumblr.js": "0.0.x",
