--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DiscordBot",
+  "name": "CSP Bot",
   "version": "0.1.1",
   "description": "Bot for Discord app",
   "readme": "README.md",
