--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "d20": "^1.4.1",
     "discord.js": "11.1.x",
     "feedparser": "1.1.x",
-    "ffmpeg-binaries": "^3.2.2-3",
+    "ffmpeg-binaries": "^3.2.2",
     "html-to-text": "^3.3.0",
     "leet": "^1.3.0",
+    "lodash": "^4.17.11",
     "nock": "1.7.x",
     "node-wolfram": "0.0.1",
     "npm": "",
+    "npm-check-updates": "^2.14.2",
     "opusscript": "0.0.6",
     "querystring": "0.2.x",
     "request-promise": "^4.2.1",
@@ -29,9 +31,9 @@
     "underscore": "1.8.x",
     "urban": "^0.3.1",
     "wikijs": "^0.1.4",
-    "youtube-dl": "1.11.1",
+    "youtube-dl": "^1.12.2",
     "youtube-node": "^1.3.2",
-    "ytdl-core": "^0.20.2"
+    "ytdl-core": "^0.20.4"
   },
   "main": "discord_bot.js"
 }
