--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "d20": "^1.4.1",
     "discord.js": "11.4.x",
     "feedparser": "1.1.x",
+    "firebase-admin": "7.0.0",
     "html-to-text": "^3.3.0",
     "imgflipper": "^1.0.1",
     "leet": "^1.3.0",
