--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "underscore": "1.8.x",
     "urban": "^0.3.1",
     "wikijs": "^0.1.4",
-    "youtube-dl": "^1.11.1"
+    "youtube-dl": "^1.11.1",
+    "youtube-node": "^1.3.3"
   },
   "main": "discord_bot.js"
 }
