--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "DiscordBot",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Bot for Discord app",
   "readme": "README.md",
-  "maintainers": [],
-  "author": "",
+  "maintainers": [
+    {
+      "name": "Alex Chaldyshev",
+      "url": "https://github.com/chalda"
+    },
+    {
+      "name": "Johnny Dickinson",
+      "url": "https://github.com/Einarin"
+    }
+  ],
+  "author": "Alex Chaldyshev",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chalda/DiscordBot.git"
@@ -32,9 +41,12 @@
     "urban": "^0.3.1",
     "wikijs": "^0.1.4",
     "youtube-dl": "^2.0.0",
-    "ytdl-core": "^0.29.3",
     "youtube-node": "^1.3.3",
+    "ytdl-core": "^0.29.3",
     "zucc": "^0.1.2"
   },
-  "main": "discord_bot.js"
+  "main": "discord_bot.js",
+  "scripts": {
+    "postinstall": "node ./node_modules/youtube-dl/scripts/download.js"
+  }
 }
