--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html-to-text": "^3.3.0",
     "imgflipper": "^1.0.1",
     "leet": "^1.3.0",
+    "lodash": "^4.17.15",
     "nock": "1.7.x",
     "node-opus": "^0.3.2",
     "node-wolfram": "0.0.1",
