--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cleverbot-node": "^0.2.8",
     "d20": "^1.4.1",
     "discord.js": "^11.5.1",
+    "dotenv": "^8.1.0",
     "feedparser": "1.1.x",
     "html-to-text": "^3.3.0",
     "imgflipper": "^1.0.1",
@@ -33,7 +34,7 @@
     "node-wolfram": "0.0.1",
     "npm": "",
     "querystring": "0.2.x",
-    "request": "^2.85.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.1",
     "sinon": "1.14.x",
     "tumblr.js": "0.0.x",
@@ -41,7 +42,7 @@
     "urban": "^0.3.1",
     "wikijs": "^0.1.4",
     "youtube-dl": "^2.0.0",
-    "youtube-node": "^1.3.3",
+    "youtube-node": "^1.2.0",
     "ytdl-core": "^0.29.3",
     "zucc": "^0.1.2"
   },
