Improved Stock Plugin (#150)
* Added new files.

* Update stock.js

* added ston

* Updated stock.js

* Merge both stock implementations

Co-authored-by: Johnny Dickinson <kc0itv@gmail.com>

--- a/plugins/Stock/package.json
+++ b/plugins/Stock/package.json
@@ -1,6 +1,7 @@
 {
   "main": "stock.js",
   "dependencies": {
+    "request": "2.x.x",
     "string-sanitizer": "1.1.x",
     "axios": "0.19.x",
     "cheerio": "1.0.x"
