--- a/package.json
+++ b/package.json
@@ -1,25 +1,7 @@
 {
-  "name": "DiscordBot",
-  "version": "0.2.0",
-  "description": "Bot for Discord app",
-  "readme": "README.md",
-  "maintainers": [
-    {
-      "name": "Alex Chaldyshev",
-      "url": "https://github.com/chalda"
-    },
-    {
-      "name": "Johnny Dickinson",
-      "url": "https://github.com/Einarin"
-    }
-  ],
-  "author": "Alex Chaldyshev",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/chalda/DiscordBot.git"
-  },
-  "license": "GPL-2.0",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-node8": "^1.2.0",
     "bufferutil": "^4.0.1",
     "cleverbot-node": "^0.2.8",
     "d20": "^1.4.1",
@@ -43,10 +25,19 @@
     "youtube-dl": "^2.0.0",
     "youtube-node": "^1.3.3",
     "ytdl-core": "^0.29.3",
-    "zucc": "^0.1.2"
+    "zucc": "^0.1.2",
+    "pm2": "^2.10.2"
   },
-  "main": "discord_bot.js",
+
   "scripts": {
-    "postinstall": "node ./node_modules/youtube-dl/scripts/download.js"
-  }
+    "postinstall": "node ./node_modules/youtube-dl/scripts/download.js",
+    "start": "pm2 start ecosystem.config.js"
+  },
+  "name": "DiscordBot",
+  "version": "1.0.0",
+  "description": "Discord Chat Bot",
+  "main": "discord_bot.js",
+  "repository": "https://github.com/CoinPoolServices/CPS-tipbot",
+  "author": "ME <nexusnow@protonmail.com>",
+  "license": "MIT"
 }
