Use ENV instead of config

--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "node-opus": "^0.3.2",
     "node-wolfram": "0.0.1",
     "npm": "",
+    "dotenv": "^8.1.0",
     "querystring": "0.2.x",
-    "request": "^2.85.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.1",
     "sinon": "1.14.x",
     "tumblr.js": "0.0.x",
