Add Crypto to bot

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,13 @@ messagebox.json
 config.json
 memes.json
 meme_channels.json
+
+.vs/DiscordBot/config/applicationhost.config
+
+.vs/DiscordBot/v16/.suo
+
+.vs/ProjectSettings.json
+
+.vs/slnx.sqlite
+
+.vs/VSWorkspaceState.json
