--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
     "babel-cli": "^6.26.0",
     "babel-preset-node8": "^1.2.0",
     "bufferutil": "^4.0.1",
+    "bitcoin": "^3.0.1",
+    "chrono-node": "^1.3.5",
+    "config": "^1.27.0",
+    "embed-creator": "^1.1.4",
+    "jsonpath": "^0.2.12",
+    "moment": "^2.20.1",
+    "moment-timezone": "^0.5.14",
     "cleverbot-node": "^0.2.8",
     "d20": "^1.4.1",
     "discord.js": "^11.5.1",
@@ -13,6 +20,9 @@
     "nock": "1.7.x",
     "node-opus": "^0.3.2",
     "node-wolfram": "0.0.1",
+    "node-cmd": "^3.0.0",
+    "node-config": "^0.0.2",
+    "numeral": "^2.0.6",
     "npm": "",
     "querystring": "0.2.x",
     "request": "^2.85.0",
