--- a/plugins/Stock/package.json
+++ b/plugins/Stock/package.json
@@ -2,8 +2,8 @@
   "main": "stock.js",
   "dependencies": {
     "request": "2.x.x",
-    "string-sanitizer": "1.1.x",
+    "string-sanitizer": "1.1.1",
     "axios": "0.19.x",
-    "cheerio": "1.0.x"
+    "cheerio": "1.0.0-rc.3"
   }
 }
