--- a/package.json
+++ b/package.json
@@ -20,26 +20,31 @@
   },
   "license": "GPL-2.0",
   "dependencies": {
+    "@discordjs/opus": "*",
+    "axios": "^0.19.2",
     "bufferutil": "^4.0.1",
+    "cheerio": "^1.0.0-rc.3",
     "cleverbot-node": "^0.2.8",
     "d20": "^1.4.1",
-    "discord.js": "^11.5.1",
+    "discord.js": "12.2.0",
     "feedparser": "1.1.x",
     "html-to-text": "^3.3.0",
     "imgflipper": "^1.0.1",
     "leet": "^1.3.0",
     "lodash": "^4.17.15",
     "nock": "1.7.x",
-    "node-opus": "^0.3.2",
+    "node-opus": "^0.3.3",
     "node-wolfram": "0.0.1",
     "npm": "",
     "querystring": "0.2.x",
-    "request": "^2.85.0",
+    "request": "^2.88.2",
     "request-promise": "^4.2.1",
     "sinon": "1.14.x",
+    "string-sanitizer": "^1.1.1",
     "tumblr.js": "0.0.x",
     "underscore": "1.8.x",
     "urban": "^0.3.1",
+    "uws": "^100.0.1",
     "wikijs": "^0.1.4",
     "youtube-dl": "^2.0.0",
     "youtube-node": "^1.3.3",
