Add twitch_client_secret into auth.json.example

--- a/auth.json.example
+++ b/auth.json.example
@@ -9,5 +9,6 @@
   "imgflip_password": "https://imgflip.com/ password",
   "wolfram_api_key": "go here and click sign up http://products.wolframalpha.com/api/",
   "twitch_client_id": "create a twitch app here https://dev.twitch.tv/dashboard/apps/create (requires a twitch account)",
+  "twitch_client_secret": "get this from the twitch dev dashboard once you've created your twitch app",
   "worldtradingdata_api_key": "create one at https://www.worldtradingdata.com/register"
 }
