Show Infobox data when available for wiki

--- a/plugins/Wikipedia/package.json
+++ b/plugins/Wikipedia/package.json
@@ -1,6 +1,7 @@
 {
   "main": "wikipedia.js",
   "dependencies": {
-    "wikijs": "6.0.1"
+    "wikijs": "6.0.1",
+    "split-camelcase-to-words": "1.0.1"
   }
 }
