--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.1",
     "sinon": "1.14.x",
+    "split-camelcase-to-words": "^1.0.1",
     "string-sanitizer": "^1.1.1",
     "tumblr.js": "0.0.x",
     "underscore": "1.8.x",
