update package dependencies and add deployment convenince functions

--- a/package.json
+++ b/package.json
@@ -20,41 +20,40 @@
   },
   "license": "GPL-2.0",
   "dependencies": {
-    "@discordjs/opus": "^0.3.2",
-    "axios": "^0.19.2",
+    "@discordjs/opus": "0.3.2",
+    "axios": "0.20.0",
     "bufferutil": "^4.0.1",
     "cheerio": "^1.0.0-rc.3",
-    "cleverbot-node": "^0.2.8",
     "d20": "^1.4.1",
     "discord.js": "12.2.0",
+    "erlpack": "^0.1.3",
     "feedparser": "1.1.x",
+    "ffmpeg-static": "^4.2.7",
+    "forever": "3.0.2",
     "html-to-text": "^3.3.0",
     "imgflipper": "^1.0.1",
     "leet": "^1.3.0",
-    "lodash": "^4.17.15",
-    "memorystream": "^0.3.1",
-    "nock": "1.7.x",
+    "lodash": "^4.17.20",
+    "memorystream": "0.3.1",
     "node-wolfram": "0.0.1",
     "npm": "",
     "querystring": "0.2.x",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.1",
-    "sinon": "1.14.x",
+    "request": "2.88.2",
+    "request-promise": "4.2.1",
     "split-camelcase-to-words": "^1.0.1",
     "string-sanitizer": "^1.1.1",
     "tumblr.js": "0.0.x",
-    "underscore": "1.8.x",
     "urban": "^0.3.1",
+    "utf-8-validate": "^5.0.2",
     "uws": "^100.0.1",
     "wikijs": "^6.0.1",
-    "youtube-dl": "^2.0.0",
-    "youtube-node": "^1.3.3",
-    "ytdl-core": "^0.29.3",
-    "zucc": "^0.1.2"
+    "youtube-dl": "^3.0.2",
+    "youtube-node": "^1.3.3"
   },
   "main": "discord_bot.js",
   "scripts": {
     "start": "node ./discord_bot.js",
+    "forever": "forever -o out.log -e err.log -n 10000 start ./discord_bot.js",
     "postinstall": "node ./node_modules/youtube-dl/scripts/download.js"
   }
 }
