--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lodash": "^4.17.20",
     "memorystream": "0.3.1",
     "node-wolfram": "0.0.1",
-    "npm": "",
+    "npm": "^6.14.8",
     "querystring": "0.2.x",
     "request": "2.88.2",
     "request-promise": "4.2.1",
