UserRole add/remove toggle quick fix fixed issue with args[] missing split from arg. fixed issue with role var in .find clashed with role var with role.id (renamed to roleid) fixed users own role being removed instead of mentioned user.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 
+#lock file
+package-lock.json
+
 #config files
 auth.json
 rss.json
