--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "request": "2.88.2",
     "request-promise": "4.2.1",
     "split-camelcase-to-words": "^1.0.1",
+    "spotify-web-api-node": "^5.0.2",
     "string-sanitizer": "^1.1.1",
     "tumblr.js": "0.0.x",
     "urban": "^0.3.1",
