adds eval/exec commands with JS VMs (#199)
* adds eval/exec commands with JS VMs

* backtick removal regex

* properly remove backticks including with language

* Make "eval" dangerous again

* update example permissions

Co-authored-by: Johnny Dickinson <kc0itv@gmail.com>

--- a/permissions.json.example
+++ b/permissions.json.example
@@ -6,6 +6,7 @@
 
 {
   "global": {
+    "exec": false,
     "eval": false,
     "pullanddeploy": false,
     "setUsername": false,
@@ -13,11 +14,13 @@
   },
   "users": {
     "12300000000000004": {
-      "eval": true,
+      "exec": false,
+      "eval": false,
       "cmdauth": true,
       "*": true
     },
     "56700000000000008": {
+      "exec": false,
       "eval": false,
       "say": false,
       "cmdauth": false,
