make presence default false in permissions

--- a/permissions.json.example
+++ b/permissions.json.example
@@ -10,7 +10,8 @@
     "eval": false,
     "pullanddeploy": false,
     "setUsername": false,
-    "cmdauth": false
+    "cmdauth": false,
+    "presence": false
   },
   "users": {
     "12300000000000004": {
