--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@discordjs/opus": "0.3.2",
     "axios": "0.21.2",
     "bufferutil": "^4.0.1",
-    "cheerio": "^1.0.0-rc.3",
+    "cheerio": "^1.0.0-rc.11",
     "d20": "^1.4.1",
-    "discord.js": "12.2.0",
+    "discord.js": "13.8.0",
     "feedparser": "1.1.x",
     "ffmpeg-static": "^4.2.7",
     "forever": "3.0.2",
@@ -35,7 +35,8 @@
     "lodash": "^4.17.21",
     "memorystream": "0.3.1",
     "node-wolfram": "0.0.1",
-    "npm": "^6.14.8",
+    "npm": "^6.14.17",
+    "opusscript": "0.0.8",
     "querystring": "0.2.x",
     "request": "2.88.2",
     "request-promise": "4.2.1",
@@ -46,7 +47,7 @@
     "urban": "^0.3.1",
     "utf-8-validate": "^5.0.2",
     "uws": "^100.0.1",
-    "vm2": "^3.9.4",
+    "vm2": "^3.9.9",
     "wikijs": "^6.0.1",
     "youtube-dl": "^3.0.2",
     "youtube-node": "^1.3.3"
