--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "GPL-2.0",
   "dependencies": {
     "@discordjs/opus": "0.3.2",
+    "@discordjs/voice": "^0.10.0",
     "axios": "0.21.2",
     "bufferutil": "^4.0.1",
     "cheerio": "^1.0.0-rc.11",
@@ -32,6 +33,7 @@
     "html-to-text": "^3.3.0",
     "imgflipper": "^1.0.1",
     "leet": "^1.3.0",
+    "libsodium-wrappers": "^0.7.10",
     "lodash": "^4.17.21",
     "memorystream": "0.3.1",
     "node-wolfram": "0.0.1",
