--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "license": "GPL-2.0",
   "dependencies": {
+    "@discordjs/builders": "^0.15.0",
     "@discordjs/opus": "0.3.2",
     "@discordjs/voice": "^0.10.0",
     "axios": "0.21.2",
@@ -40,7 +41,7 @@
     "npm": "^6.14.17",
     "opusscript": "0.0.8",
     "querystring": "0.2.x",
-    "request": "2.88.2",
+    "request": "^2.88.2",
     "request-promise": "4.2.1",
     "split-camelcase-to-words": "^1.0.1",
     "spotify-web-api-node": "^5.0.2",
